# lcrc-experiments

./: README.md
fills/0001-backoff-jitter/: .dockerignore  Dockerfile  README.md  pyproject.toml
fills/0001-backoff-jitter/src/lcrc_backoff/: backoff.py  cli.py
fills/0001-backoff-jitter/tests/: test_backoff.py  test_cli.py
fills/0002-rate-limiter/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
fills/0002-rate-limiter/src/lcrc_ratelimit/: __init__.py  cli.py  limiter.py
fills/0002-rate-limiter/tests/: test_cli.py  test_limiter.py
fills/0003-circuit-breaker/: .gitignore  Dockerfile  README.md  pyproject.toml
fills/0003-circuit-breaker/src/lcrc_breaker/: breaker.py  cli.py
fills/0003-circuit-breaker/tests/: test_breaker.py  test_cli.py
