[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lcrc-fill-0001-backoff-jitter"
version = "0.1.0"
description = "LCRC Fill 0001: exponential backoff with jitter + tiny CLI"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
lcrc-backoff = "lcrc_backoff.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

