[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lcrc-breaker"
version = "0.1.0"
description = "LCRC Fill 0003: circuit breaker (state machine) + CLI + tests."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Large Code-Run Collider" }]
license = { text = "MIT" }

[project.scripts]
lcrc-breaker = "lcrc_breaker.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
